objects/nCBC__CBCCreditBureaus__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies which of the major credit bureaus to request data from.</description>
    <fields>
        <fullName>nCBC__Use_Equifax__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Equifax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__Use_Experian__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Experian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCBC__Use_TransUnion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use TransUnion</label>
        <type>Checkbox</type>
    </fields>
    <label>CBC Credit Bureaus</label>
</CustomObject>